--- a/devicesettings/res/drawable/ic_settings_additional_buttons.xml
+++ b/devicesettings/res/drawable/ic_settings_additional_buttons.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-   Copyright (c) 2017-2019 The LineageOS Project
+   Copyright (c) 2017-2020 The LineageOS Project
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -19,7 +19,8 @@
    android:width="24dp"
    android:height="24dp"
    android:viewportWidth="24"
-   android:viewportHeight="24">
+   android:viewportHeight="24"
+   android:tint="?android:attr/colorControlNormal">
 
     <path
        android:fillColor="@android:color/white"
