pro1: devicesettings: Remove touchscreen settings preference category
It doesn't make sense to have preference categories with the same name
as the preference screen, not to mention that there are no other
preferences to add to a different category.

Change-Id: Ibe4446405622bd12f0b56038b73a8bee4b036ce1

--- a/devicesettings/res/xml/touchscreen_panel.xml
+++ b/devicesettings/res/xml/touchscreen_panel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2019 The LineageOS Project
+     Copyright (C) 2018-2020 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,18 +15,17 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:key="touchscreen_settings"
+    android:title="@string/touchscreen_settings_title">
 
-    <PreferenceCategory
-        android:key="touchscreen_settings"
-        android:title="@string/touchscreen_settings_title" >
+    <org.lineageos.settings.device.widget.SeekBarPreference
+        android:key="touchscreen_margin"
+        android:title="@string/touchscreen_margin_title"
+        android:summary="@string/touchscreen_margin_summary"
+        android:layout="@layout/preference_slider"
+        android:defaultValue="@integer/touchscreen_margin_default"
+        android:max="@integer/touchscreen_margin_max" />
 
-        <org.lineageos.settings.device.widget.SeekBarPreference
-            android:key="touchscreen_margin"
-            android:title="@string/touchscreen_margin_title"
-            android:summary="@string/touchscreen_margin_summary"
-            android:layout="@layout/preference_slider"
-            android:defaultValue="@integer/touchscreen_margin_default"
-            android:max="@integer/touchscreen_margin_max" />
-    </PreferenceCategory>
 </PreferenceScreen>
