pro1: lights: Enable support for keyboard brightness control
The keyboard backlight driver may not support variable brightness control,
but at least we can allow toggling the lights.

The support for this has been added to the frameworks and with it
all the logic related to keyboard lights enabling/disabling when
lid opens/closes, so remove all that handling from the lights HAL.

Change-Id: Idc0a1cd5da85dfaef11a1ec9d217775e0618d839

--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -89,4 +89,11 @@
     <!-- BurnIn protection. This should be enabled on devices that have OLED displays -->
     <bool name="config_enableBurnInProtection">true</bool>
 
+    <!-- Keyboard backlight control. Possible values are:
+            0 - Not supported
+            1 - Supported, but only on/off mode
+            2 - Supported with variable brightness control
+    -->
+    <integer name="config_deviceSupportsKeyboardBrightnessControl">1</integer>
+
 </resources>
