pro1: lights: Enable support for keyboard brightness control
The keyboard backlight driver may not support variable brightness control,
but we can at least allow toggling the lights.

This support has been added to the frameworks and with it all the logic
related to keyboard lights enabling/disabling when lid opens/closes,
so also remove all that handling from the lights HAL.

Change-Id: Idc0a1cd5da85dfaef11a1ec9d217775e0618d839

--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -69,6 +69,13 @@
          pulsating and RGB control would set this config to 107. -->
     <integer name="config_deviceLightCapabilities">107</integer>
 
+    <!-- Keyboard backlight control. Possible values are:
+            0 - Not supported
+            1 - Supported, but only on/off mode
+            2 - Supported with variable brightness control
+    -->
+    <integer name="config_deviceSupportsKeyboardBrightnessControl">1</integer>
+
     <!-- Color temperature settings for LiveDisplay. These were obtained by
          measuring the display at various color balance levels. -->
     <integer name="config_minColorTemperature">2500</integer>
