--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2019 The LineageOS Project
+     Copyright (C) 2018-2020 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -25,18 +25,22 @@
             android:key="keyboard_layout"
             android:title="@string/keyboard_layout_title"
             android:entries="@array/keyboard_layout_titles"
-            android:entryValues="@array/keyboard_layout_values" />
+            android:entryValues="@array/keyboard_layout_values"
+            android:summary="%s" />
 
         <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_custom"
+            android:disableDependentsState="true"
             android:title="@string/keyboard_keymap_custom_title"/>
 
         <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_spacepower"
+            android:dependency="keyboard_keymap_custom"
             android:title="@string/keyboard_keymap_spacepower_title"/>
 
         <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_fnkeys"
+            android:dependency="keyboard_keymap_custom"
             android:title="@string/keyboard_keymap_fnkeys_title"/>
 
         <androidx.preference.SwitchPreference
