--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -18,8 +18,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <PreferenceCategory
-        android:key="keyboard_settings"
-        android:title="@string/keyboard_settings_title" >
+        android:key="keyboard_settings" >
 
         <androidx.preference.ListPreference
             android:key="keyboard_layout"
