pro1: devicesettings: Improve keyboard settings
* Rename "layout" to "physical layout"
* Add summaries
  * Add a different summary to custom keylayout pref so it's clear
    why it would be disabled in some (most?) cases
* Move the the custom keyboard layout so the probably disabled
  option is at the bottom

Change-Id: Id5e00d4ddc3b6571d86de5c6b27fadac97865677

--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -29,19 +29,23 @@
             android:summary="%s" />
 
         <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_custom"
-            android:title="@string/keyboard_keymap_custom_title"/>
-
-        <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_spacepower"
-            android:title="@string/keyboard_keymap_spacepower_title"/>
+            android:title="@string/keyboard_keymap_spacepower_title"
+            android:summary="@string/keyboard_keymap_spacepower_summary"/>
 
         <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_fnkeys"
-            android:title="@string/keyboard_keymap_fnkeys_title"/>
+            android:title="@string/keyboard_keymap_fnkeys_title"
+            android:summary="@string/keyboard_keymap_fnkeys_summary"/>
 
         <androidx.preference.SwitchPreference
             android:key="keyboard_fastpoll"
-            android:title="@string/keyboard_fastpoll_title"/>
+            android:title="@string/keyboard_fastpoll_title"
+            android:summaryOn="@string/keyboard_fastpoll_summary"
+            android:summaryOff="@string/keyboard_fastpoll_summary"/>
+
+        <androidx.preference.SwitchPreference
+            android:key="keyboard_keymap_custom"
+            android:title="@string/keyboard_keymap_custom_title"/>
     </PreferenceCategory>
 </PreferenceScreen>
