pro1: devicesettings: Introduce PhysicalLayoutDialog
* With change I1c46d3568c4d5bfc78e1cbae033071c7641fdf29 it is now
  possible to inject the keyboard layout selection to where they fit
  best: Before the built-in keyboard settings
* This dialog shows the same selection as the previous ListPreference
* Move the code getting the current and setting a new value to the
  newly added class as well
* Remove the unneded constant

Change-Id: I6f7e4ed85aff7fefe074cbcfbad140a83a01053d

--- a/devicesettings/res/values/styles.xml
+++ b/devicesettings/res/values/styles.xml
@@ -56,4 +56,13 @@
     <style name="Theme.Main.SwitchPreferenceStyle" parent="@style/Theme.Main.PreferenceStyle">
         <item name="widgetLayout">@*android:layout/preference_widget_switch</item>
     </style>
+
+    <style name="Theme.Main.Dialog" parent="@style/Theme.AppCompat.Light">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:windowBackground">?android:colorBackground</item>
+    </style>
 </resources>
