--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -28,6 +28,11 @@
             android:summary="%s" />
 
         <androidx.preference.SwitchPreference
+            android:key="keyboard_keymap_altgr"
+            android:title="@string/keyboard_keymap_altgr_title"
+            android:summary="@string/keyboard_keymap_altgr_summary"/>
+
+        <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_spacepower"
             android:title="@string/keyboard_keymap_spacepower_title"
             android:summary="@string/keyboard_keymap_spacepower_summary"/>
@@ -38,12 +43,12 @@
             android:summary="@string/keyboard_keymap_fnkeys_summary"/>
 
         <androidx.preference.SwitchPreference
+            android:key="keyboard_keymap_custom"
+            android:title="@string/keyboard_keymap_custom_title"/>
+
+        <androidx.preference.SwitchPreference
             android:key="keyboard_fastpoll"
             android:title="@string/keyboard_fastpoll_title"
             android:summary="@string/keyboard_fastpoll_summary"/>
-
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_custom"
-            android:title="@string/keyboard_keymap_custom_title"/>
     </PreferenceCategory>
 </PreferenceScreen>
