pro1: devicesettings: Add keymap mod for fn_r -> AltGr
Add a new keymap mod setting to change the right-hand diagonal
yellow arrow key to AltGr

Change-Id: I30da5417242a4bb3245ce4974b531b5523c77313

--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -29,6 +29,11 @@
             android:summary="%s" />
 
         <androidx.preference.SwitchPreference
+            android:key="keyboard_keymap_altgr"
+            android:title="@string/keyboard_keymap_altgr_title"
+            android:summary="@string/keyboard_keymap_altgr_summary"/>
+
+        <androidx.preference.SwitchPreference
             android:key="keyboard_keymap_spacepower"
             android:title="@string/keyboard_keymap_spacepower_title"
             android:summary="@string/keyboard_keymap_spacepower_summary"/>
@@ -39,12 +44,12 @@
             android:summary="@string/keyboard_keymap_fnkeys_summary"/>
 
         <androidx.preference.SwitchPreference
+            android:key="keyboard_keymap_custom"
+            android:title="@string/keyboard_keymap_custom_title"/>
+
+        <androidx.preference.SwitchPreference
             android:key="keyboard_fastpoll"
             android:title="@string/keyboard_fastpoll_title"
             android:summary="@string/keyboard_fastpoll_summary"/>
-
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_custom"
-            android:title="@string/keyboard_keymap_custom_title"/>
     </PreferenceCategory>
 </PreferenceScreen>
