--- a/devicesettings/res/xml/keyboard_panel.xml
+++ b/devicesettings/res/xml/keyboard_panel.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2018-2021 The LineageOS Project
+     Copyright (C) 2018-2022 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,40 +15,39 @@
      limitations under the License.
 -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:key="keyboard_settings"
+    android:title="@string/keyboard_settings_title">
 
-    <PreferenceCategory
-        android:key="keyboard_settings" >
+    <androidx.preference.ListPreference
+        android:key="keyboard_layout"
+        android:title="@string/keyboard_layout_title"
+        android:entries="@array/keyboard_layout_titles"
+        android:entryValues="@array/keyboard_layout_values"
+        android:summary="%s" />
 
-        <androidx.preference.ListPreference
-            android:key="keyboard_layout"
-            android:title="@string/keyboard_layout_title"
-            android:entries="@array/keyboard_layout_titles"
-            android:entryValues="@array/keyboard_layout_values"
-            android:summary="%s" />
+    <androidx.preference.SwitchPreference
+        android:key="keyboard_keymap_altgr"
+        android:title="@string/keyboard_keymap_altgr_title"
+        android:summary="@string/keyboard_keymap_altgr_summary"/>
 
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_altgr"
-            android:title="@string/keyboard_keymap_altgr_title"
-            android:summary="@string/keyboard_keymap_altgr_summary"/>
+    <androidx.preference.SwitchPreference
+        android:key="keyboard_keymap_spacepower"
+        android:title="@string/keyboard_keymap_spacepower_title"
+        android:summary="@string/keyboard_keymap_spacepower_summary"/>
 
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_spacepower"
-            android:title="@string/keyboard_keymap_spacepower_title"
-            android:summary="@string/keyboard_keymap_spacepower_summary"/>
+    <androidx.preference.SwitchPreference
+        android:key="keyboard_keymap_fnkeys"
+        android:title="@string/keyboard_keymap_fnkeys_title"
+        android:summary="@string/keyboard_keymap_fnkeys_summary"/>
 
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_fnkeys"
-            android:title="@string/keyboard_keymap_fnkeys_title"
-            android:summary="@string/keyboard_keymap_fnkeys_summary"/>
+    <androidx.preference.SwitchPreference
+        android:key="keyboard_keymap_custom"
+        android:title="@string/keyboard_keymap_custom_title"/>
 
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_keymap_custom"
-            android:title="@string/keyboard_keymap_custom_title"/>
-
-        <androidx.preference.SwitchPreference
-            android:key="keyboard_fastpoll"
-            android:title="@string/keyboard_fastpoll_title"
-            android:summary="@string/keyboard_fastpoll_summary"/>
-    </PreferenceCategory>
+    <androidx.preference.SwitchPreference
+        android:key="keyboard_fastpoll"
+        android:title="@string/keyboard_fastpoll_title"
+        android:summary="@string/keyboard_fastpoll_summary"/>
 </PreferenceScreen>
